--- a/LibriVox/StoryBoard/Library.storyboard
+++ b/LibriVox/StoryBoard/Library.storyboard
@@ -97,7 +97,7 @@
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Get-br-Ail">
                                 <rect key="frame" x="16" y="282" width="361" height="536"/>
                                 <connections>
-                                    <segue destination="p8b-f0-UyA" kind="embed" id="G1u-ah-ikx"/>
+                                    <segue destination="g2d-10-gio" kind="embed" id="IUe-DV-lK1"/>
                                 </connections>
                             </containerView>
                         </subviews>
@@ -251,7 +251,7 @@
             <objects>
                 <viewController modalTransitionStyle="flipHorizontal" id="g2d-10-gio" customClass="ContainerPagesVC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5U0-rY-qsA">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="361" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="w1W-yw-xQr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -453,7 +453,7 @@
         <image name="star" width="512" height="512"/>
         <image name="starOn" width="512" height="512"/>
         <namedColor name="AccentColor">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Gren Tone">
             <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
