--- a/LibriVox/StoryBoard/Profile.storyboard
+++ b/LibriVox/StoryBoard/Profile.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -190,6 +190,104 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mA3-EO-M8o" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2845" y="578"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="tHg-Gg-hDc">
+            <objects>
+                <viewController id="eGQ-s1-AZo" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="edh-jf-nlL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="About" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xob-Tu-19A">
+                                <rect key="frame" x="16" y="91" width="361" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="4Tn-qV-J6J"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Why was this app done?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zgS-Tg-UGm">
+                                <rect key="frame" x="16" y="132" width="361" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="abF-ml-s0X"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dvf-Zi-HmP">
+                                <rect key="frame" x="16" y="181" width="361" height="172"/>
+                                <string key="text">This app was decided to be created because of two things. First of all we wanted to know more on how to create mobile applications for the IOS ecossystem, secondly we wanted to create a more up to date app for all people that wanted to listen to librivox audiobooks </string>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Leandro Silva" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDv-rQ-QFB">
+                                <rect key="frame" x="99" y="727" width="133" height="25"/>
+                                <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="IOS Developer" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zb-mi-YoW">
+                                <rect key="frame" x="99" y="752" width="133" height="25"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pzb-wa-HBR" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
+                                <rect key="frame" x="16" y="727" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="MDC-ey-oL7"/>
+                                    <constraint firstAttribute="width" constant="75" id="YRN-V2-zi3"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="So.. who created this app?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1S-4D-wLp">
+                                <rect key="frame" x="16" y="369" width="361" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="8jU-xh-cMK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-SemiBold" family="Nunito" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v5f-lV-u80">
+                                <rect key="frame" x="16" y="418" width="361" height="147.33333333333337"/>
+                                <string key="text">This project was done by two people, Leandro Silva and Glória Martins, both are Mobile Applications majors doing this for an intership at Mindprober. To know more about Mindprober go to this website https://www.mindproberlabs.com</string>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ryd-da-gd4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zgS-Tg-UGm" firstAttribute="top" secondItem="xob-Tu-19A" secondAttribute="bottom" constant="8" symbolic="YES" id="9Du-wg-pwT"/>
+                            <constraint firstItem="xob-Tu-19A" firstAttribute="leading" secondItem="ryd-da-gd4" secondAttribute="leading" constant="16" id="ACp-IH-Dkl"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="trailing" secondItem="xob-Tu-19A" secondAttribute="trailing" constant="16" id="B4o-Xm-UaO"/>
+                            <constraint firstItem="v5f-lV-u80" firstAttribute="top" secondItem="I1S-4D-wLp" secondAttribute="bottom" constant="16" id="Bf9-Rr-lFG"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="trailing" secondItem="ZDv-rQ-QFB" secondAttribute="trailing" constant="16" id="Css-pN-Y6F"/>
+                            <constraint firstItem="v5f-lV-u80" firstAttribute="top" secondItem="I1S-4D-wLp" secondAttribute="bottom" constant="16" id="Gng-Vp-HrY"/>
+                            <constraint firstItem="Pzb-wa-HBR" firstAttribute="leading" secondItem="ryd-da-gd4" secondAttribute="leading" constant="16" id="KmE-gC-qDJ"/>
+                            <constraint firstItem="dvf-Zi-HmP" firstAttribute="top" secondItem="zgS-Tg-UGm" secondAttribute="bottom" constant="16" id="Mul-9a-Uxg"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="trailing" secondItem="v5f-lV-u80" secondAttribute="trailing" constant="16" id="O6U-5d-2hb"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="trailing" secondItem="dvf-Zi-HmP" secondAttribute="trailing" constant="16" id="bZ7-1G-9Xf"/>
+                            <constraint firstItem="v5f-lV-u80" firstAttribute="leading" secondItem="ryd-da-gd4" secondAttribute="leading" constant="16" id="cpC-gV-iwV"/>
+                            <constraint firstItem="ZDv-rQ-QFB" firstAttribute="leading" secondItem="Pzb-wa-HBR" secondAttribute="trailing" constant="16" id="jIN-B9-MWF"/>
+                            <constraint firstItem="I1S-4D-wLp" firstAttribute="top" secondItem="dvf-Zi-HmP" secondAttribute="bottom" constant="16" id="lG7-yn-9gS"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="bottom" secondItem="Pzb-wa-HBR" secondAttribute="bottom" constant="16" id="mEp-79-DJs"/>
+                            <constraint firstItem="I1S-4D-wLp" firstAttribute="leading" secondItem="ryd-da-gd4" secondAttribute="leading" constant="16" id="mSg-75-haq"/>
+                            <constraint firstItem="dvf-Zi-HmP" firstAttribute="leading" secondItem="ryd-da-gd4" secondAttribute="leading" constant="16" id="nzC-uY-K5y"/>
+                            <constraint firstItem="ryd-da-gd4" firstAttribute="trailing" secondItem="I1S-4D-wLp" secondAttribute="trailing" constant="16" id="sTz-uN-OUP"/>
+                            <constraint firstItem="xob-Tu-19A" firstAttribute="top" secondItem="ryd-da-gd4" secondAttribute="top" constant="32" id="zkH-Dw-mJ1"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zZ5-oZ-dvh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1293.8931297709923" y="577.46478873239437"/>
         </scene>
         <!--ProfileVC-->
         <scene sceneID="gRA-9B-58Q">
