--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -830,16 +830,6 @@
             </objects>
             <point key="canvasLocation" x="6823.6641221374039" y="0.0"/>
         </scene>
-        <!--PlayerVC-->
-        <scene sceneID="1a1-eE-p37">
-            <objects>
-                <viewControllerPlaceholder storyboardName="HomePage" referencedIdentifier="PlayerVC" id="cnZ-fR-Mt7" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="H1P-08-4E3"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="76Y-DR-dtw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="7662" y="1161"/>
-        </scene>
         <!--Author PageVC-->
         <scene sceneID="0BO-gm-F7b">
             <objects>
@@ -1159,8 +1149,7 @@
                                                     <userDefinedRuntimeAttribute type="image" keyPath="imgSelected" value="pause"/>
                                                 </userDefinedRuntimeAttributes>
                                                 <connections>
-                                                    <action selector="didClick:" destination="RBA-gx-2sX" eventType="touchUpInside" id="wgr-nG-4mh"/>
-                                                    <segue destination="cnZ-fR-Mt7" kind="show" id="KsM-L7-Nlm"/>
+                                                    <action selector="playBookBtn:" destination="RBA-gx-2sX" eventType="touchUpInside" id="sFN-b6-nlY"/>
                                                 </connections>
                                             </button>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="whb-8G-V9O" customClass="RoundedBookImageView" customModule="LibriVox" customModuleProvider="target">
@@ -1337,11 +1326,11 @@
         <image name="pause" width="512" height="512"/>
         <image name="play" width="512" height="512"/>
         <image name="play-button" width="512" height="512"/>
-        <image name="star" catalog="system" width="128" height="116"/>
         <image name="star" width="512" height="512"/>
+        <image name="star" catalog="system" width="128" height="116"/>
         <image name="starOn" width="512" height="512"/>
         <namedColor name="AccentColor">
-            <color red="1" green="0.79199999570846558" blue="0.15700000524520874" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Green Tone">
             <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
